--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "## Challenge Write a function called reverseArray which takes an array as an argument.",
   "main": "challenges/arrayShift/array-shift.js",
   "scripts": {
-    "test": "jest --verbose --coverage"
+    "test": "jest --verbose --coverage",
+    "test:watch": "npm run test -- --watch",
+    "lint": "eslint '**/*.js'"
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,8 @@
     "eslint": "6.7.2",
     "jest": "24.9.0"
   },
-  "keywords": []
+  "keywords": [],
+  "dependencies": {
+    "acorn": "7.1.0"
+  }
 }
