--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "data-structures-and-algorithms",
   "version": "1.0.0",
   "description": "## Challenge Write a function called reverseArray which takes an array as an argument.",
-  "main": "challenges/arrayShift/array-shift.js",
+  "main": "queue-with-stacks.js",
   "scripts": {
     "test": "jest --verbose --coverage",
     "test:watch": "npm run test -- --watch",
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/beekman/data-structures-and-algorithms#readme",
   "devDependencies": {
+    "@jest/types": "24.9.0",
     "@types/jest": "24.0.23",
     "eslint": "6.7.2",
-    "jest": "24.9.0"
+    "jest": "24.9.0",
+    "supertest": "4.0.2"
   },
   "keywords": [],
   "dependencies": {
