--- a/.editorconfig
+++ b/.editorconfig
@@ -15,5 +15,5 @@ charset = utf-8
 max_line_length = 119
 
 # Use 2 spaces for the HTML files
-[*.{html, js, css, yml, jinja2, json}]
+[*.{html, js, jsx, css, yml, jinja2, json}]
 indent_size = 2
