singleNumber solution, and eslintrc fix for unused vars

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
   ],
   "rules": {
     "no-console": "warn",
+    "no-unused-vars": ["error", { "vars": "none", "args": "after-used", "ignoreRestSiblings": false }],
     "indent": [
       "error",
       2,
